@startuml
package induction {

    Detector ..> RulePopulation: uses
    Detector "1" --> "[1;*]" Production: creates
    Detector : __init__(self, coordinates)
    Detector : generate_production(self, environment, rule_population): list<Production>
    Detector : coordinates: tuple

    ProductionPool --o Production
    ProductionPool : non_empty_productions
    ProductionPool : empty_productions
    ProductionPool : add_production(self, production)
    ProductionPool : is_empty(self)
    ProductionPool : get_effectors(self)
    ProductionPool : get_unsatisfied_detectors(self)

    Production : __init__(self, detector, rule)
    Production : detector
    Production : rule
    Production : is_empty(self)
    Production : get_coordinates(self)


    EmptyProduction --|> Production
    EmptyProduction : __init__(self, detector)
    EmptyProduction : detector


    enum CykTypeId {
        symbol_pair_executor
        parent_combination_executor
        cell_executor
        row_executor
        table_executor
        production_pool
        environment
        cyk_result
        cyk_terminal_cell_executor
    }

    class CykService
    CykService : __init__(self, factory, configuration, randomizer)
    CykService : coverage_operations
    CykService : configuration
    CykService : randomizer
    CykService : rule_adding_supervisor
    CykService : perform_cyk(self, rule_population, sentence)
    CykService ..> CykExecutors: creates (factory)
    CykService ..> CykResult: uses
    CykService ..> Environment: creates (factory)
    CykService --* "1" CykTypeId

    package CykExecutors {
    '&begin_cyk_executors

        CykExecutor --* "1" CykTypeId
        CykExecutor : __init__(self, child_level, cyk_service)
        CykExecutor : create_child_executor(self, *args)

        CykSymbolPairExecutor --|> CykExecutor
        CykSymbolPairExecutor --> Detector: creates
        CykSymbolPairExecutor <..> CykParentCombinationExecutor: uses
        CykSymbolPairExecutor : __init__(self, parent_executor, left_id, right_id, cyk_service)
        CykSymbolPairExecutor : execute(self, environment, rule_population)
        CykSymbolPairExecutor : get_coordinates(self)
        CykSymbolPairExecutor : parent_executor

        CykParentCombinationExecutor --|> CykExecutor
        CykParentCombinationExecutor : __init__(self, cell_executor, shift, cyk_service)
        CykParentCombinationExecutor : parent_executor
        CykParentCombinationExecutor : current_row
        CykParentCombinationExecutor : current_col
        CykParentCombinationExecutor : shift
        CykParentCombinationExecutor : execute(self, environment, rule_population)
        CykParentCombinationExecutor : get_coordinates(self)

        CykCellExecutor --|> CykExecutor
        CykCellExecutor <..> CykParentCombinationExecutor: uses
        CykCellExecutor : __init__(self, row_executor, column, cyk_service)
        CykCellExecutor : parent_executor
        CykCellExecutor : current_row
        CykCellExecutor : current_col
        CykCellExecutor : execute(self, environment, rule_population)

        CykRowExecutor --|> CykExecutor
        CykRowExecutor <..> CykCellExecutor
        CykRowExecutor : __init__(self, table_executor, row, cyk_service)
        CykRowExecutor : parent_executor
        CykRowExecutor : current_row
        CykRowExecutor : execute(self, environment, rule_population)

        CykTableExecutor --|> CykExecutor
        CykTableExecutor <..> CykRowExecutor: uses
        CykTableExecutor : __init__(self, cyk_service)
        CykTableExecutor : execute(self, environment, rule_population)
        CykTableExecutor --> CykResult: creates
        CykTableExecutor <..> CykFirstRowExecutor: uses

        CykFirstRowExecutor --|> CykRowExecutor
        CykFirstRowExecutor : __init__(self, table_executor, row, cyk_service)
        CykFirstRowExecutor : execute(self, environment, rule_population)
        CykFirstRowExecutor <..> CykTerminalCellExecutor

        CykTerminalCellExecutor --|> CykCellExecutor
        CykTerminalCellExecutor : __init__(self, row_executor, column, cyk_service)
        CykTerminalCellExecutor : execute(self, environment, rule_population)
        CykTerminalCellExecutor --> Detector: creates

    '&end_cyk_executors
    }

    class CykResult
    CykResult : belongs_to_grammar

    CykExecutors ..> Environment: uses
    CykExecutors ..> CykService: uses
    CykExecutors ..> Production: uses
    CykExecutors ..> RulePopulation: uses
    '&alt_cyk_executors CykExecutors --> CykResult: creates
    '&alt_cyk_executors CykExecutors --* "1" CykTypeId
    '&alt_cyk_executors CykExecutors --> Detector: creates

    Environment ..* "1" Sentence
    Environment : __init__(self, sentence, factory)
    Environment : sentence
    Environment : cyk_table
    Environment : get_symbols(self, absolute_coordinates)
    Environment : add_production(self, production)
    Environment : get_left_parent_symbol_count(self, coordinates_with_shift)
    Environment : get_right_parent_symbol_count(self, coordinates_with_shift)
    Environment : get_row_length(self, row)
    Environment : get_sentence_length(self)
    Environment : validate_absolute_coordinates(self, coordinates)
    Environment : get_sentence_symbol(self, index)
    Environment : get_detector_symbols(self, cords)
    Environment : is_sentence_positive(self)
    Environment : get_unsatisfied_detectors(self, coordinates)
    Environment : has_no_productions(self, coordinates)

    Environment ..> ProductionPool: creates (factory)
    Environment ..> Production: uses

    SymbolTranslator --> Symbol: translates

    Sentence --o Symbol
    Sentence : __init__(self, symbols, is_positive_sentence=None)
    Sentence : is_positive_sentence
    Sentence : __len__(self)
    Sentence : get_symbol(self, index)

    class Symbol
    Symbol : __init__(self, symbol_id)

    RulePopulation : __init__(self, starting_symbol, universal_symbol=None, previous_instance=None)
    RulePopulation : starting_symbol
    RulePopulation : universal_symbol
    RulePopulation : max_terminal_symbols
    RulePopulation : add_rule(self, rule)
    RulePopulation : get_rules_by_right(self, pair)
    RulePopulation : get_terminal_rules(self, symbol)
    RulePopulation : get_random_non_terminal_symbol(self, randomizer)
    RulePopulation --o Rule
    RulePopulation --> Symbol: creates

    Rule : __init__(self, parent, left_child, right_child)
    Rule : parent
    Rule : left_child
    Rule : right_child
    Rule : is_terminal_rule(self)

    TerminalRule --|> Rule
    TerminalRule : __init__(self, parent, child)

    enum AddingRuleStrategyHint {
        expand_population
        control_population_size
    }

    package RuleAdding {
        '&begin_rule_adding

        class AddingRuleStrategy
        AddingRuleStrategy : is_applicable(self, strategy_hint)
        AddingRuleStrategy : apply(self, rule, rule_population)
        AddingRuleStrategy ..> RulePopulation: uses
        AddingRuleStrategy ..> Rule: uses

        class SimpleAddingRuleStrategy
        SimpleAddingRuleStrategy --|> AddingRuleStrategy

        class AddingRuleWithCrowdingStrategy
        AddingRuleWithCrowdingStrategy --|> AddingRuleStrategy

        class AddingRuleSupervisor
        AddingRuleSupervisor : adding_rule_strategies
        AddingRuleSupervisor : add_rule(self, rule, rule_population, strategy_hint=expand_population)
        AddingRuleSupervisor ..* "1..*" AddingRuleStrategy
        AddingRuleSupervisor ..> AddingRuleStrategyHint: uses
        AddingRuleSupervisor "1" *.. CykService

        '&end_rule_adding
    }

    '&alt_rule_adding RuleAdding ..> RulePopulation: uses
    '&alt_rule_adding RuleAdding ..> Rule: uses
    '&alt_rule_adding RuleAdding ..> AddingRuleStrategyHint: uses
    '&alt_rule_adding RuleAdding "1" *.. CykService



    enum CoverageType {
        unknown_terminal_symbol
        no_effector_found
        no_starting_symbol
    }

    package Coverage {
        '&begin_coverage

        class CoverageOperator
        CoverageOperator : chance
        CoverageOperator : coverage_type
        CoverageOperator : __init__(self, coverage_type)
        CoverageOperator : cover(self, cyk_service, environment, rule_population, coordinates)
        CoverageOperator : cover_impl(self, cyk_service, environment, rule_population, coordinates)
        CoverageOperator : get_chance(self, cyk_service)
        CoverageOperator --> CoverageType: uses

        class TerminalCoverageOperator
        TerminalCoverageOperator --|> CoverageOperator

        class UniversalCoverageOperator
        UniversalCoverageOperator --|> CoverageOperator

        class StartingCoverageOperator
        StartingCoverageOperator --|> CoverageOperator

        class AggressiveCoverageOperator
        AggressiveCoverageOperator --|> CoverageOperator

        class FullCoverageOperator
        FullCoverageOperator --|> CoverageOperator

        class CoverageOperations
        CoverageOperations : __init__(self)
        CoverageOperations : operators
        CoverageOperations : perform_coverage(self, cyk_service, coverage_type, environment, rule_population, coordinates)
        CoverageOperations "0" --* "*" CoverageOperator
        CoverageOperations --> Rule: creates
        CoverageOperations ..> CykService: uses
        CoverageOperations "1" *.. CykService
        '&end_coverage
    }

    '&alt_coverage Coverage ..> Environment: uses
    '&alt_coverage Coverage ..> RulePopulation: uses
    '&alt_coverage Coverage --> Rule: creates
    '&alt_coverage Coverage ..> CykService: uses
    '&alt_coverage Coverage "1" *.. CykService
    '&alt_coverage Coverage --> CoverageType: uses
}

package datalayer {
    SymbolTranslator --() ExternalSymbol: translates
}

@enduml
